# docs/swagger.yaml
@@ -1,5 +1,29 @@
 basePath: /api
 definitions:
+  model.Author:
+    properties:
+      avatar_path:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  model.Category:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   model.Media:
     properties:
       created_at:
@@ -25,8 +49,18 @@ definitions:
     - MediaTypeVideo
   model.Post:
     properties:
+      author:
+        $ref: '#/definitions/model.Author'
+      author_id:
+        type: integer
+      banner_path:
+        type: string
       body:
         type: string
+      category:
+        $ref: '#/definitions/model.Category'
+      category_id:
+        type: integer
       created_at:
         type: string
       id:
